## Makefile.am
## vim: ts=3
##
## Process this file with automake to produce Makefile.in

asn_DATA = TR.asn \
		TC.asn \
		TCAPMessages.asn \
		DialoguePDUs.asn \
		UnidialoguePDUs.asn \
		Remote-Operations-Information-Objects.asn \
		Remote-Operations-Useful-Definitions.asn \
		Remote-Operations-Generic-ROS-PDUs.asn \
		TC-Notation-Extensions.asn \
		TC-TMP.asn \
		TC-Testing-User.asn \
		TCAP-Examples.asn \
		TCAP-Tools.asn

